--- a/packages/SystemUI/res/values/ex_strings.xml
+++ b/packages/SystemUI/res/values/ex_strings.xml
@@ -144,5 +144,13 @@
     <string name="quick_settings_theme_tile_accent_detail_title">Select accent</string>
     <string name="quick_settings_theme_tile_style_detail_title">Select theme</string>
 
+    <!-- Gaming mode -->
+    <string name="gaming_mode_not_enabled">Gaming mode is disabled in settings</string>
+    <string name="quick_settings_gaming_mode_label">Gaming mode</string>
+    <!-- Content description of the Gaming mode tile in quick settings when disabled (not shown on the screen). [CHAR LIMIT=NONE] -->
+    <string name="accessibility_quick_settings_gaming_mode_disabled">Gaming mode turned off.</string>
+    <!-- Content description of the Gaming mode tile in quick settings when enabled (not shown on the screen). [CHAR LIMIT=NONE] -->
+    <string name="accessibility_quick_settings_gaming_mode_enabled">Gaming mode turned on.</string>
+
 </resources>
 
